# polymarket

./: .gitignore  README.md  pyproject.toml
.planning/: MILESTONE-AUDIT.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phase-3/: CONTEXT.md  PLAN.md
.planning/phase-4/: CONTEXT.md  PLAN.md
.planning/phase-5/: CONTEXT.md  PLAN.md
.planning/phase-6/: CONTEXT.md  PLAN.md
.planning/phases/1/: 1-SUMMARY.md
.planning/phases/2/: 2-SUMMARY.md
.planning/phases/3/: 3-SUMMARY.md
.planning/phases/4/: 4-SUMMARY.md
.planning/phases/5/: 5-SUMMARY.md
.planning/phases/6/: 6-SUMMARY.md
docs/superpowers/plans/: 2026-04-05-polymarket-mvp-foundation.md  2026-04-06-real-ingestion-replay-pipeline.md
docs/superpowers/specs/: 2026-04-05-polymarket-cross-market-inconsistency-design.md
src/polymarket_bot/: cli.py  config.py  pipeline.py
src/polymarket_bot/analytics/: reporting.py  store.py
src/polymarket_bot/domain/: analytics.py  bankroll.py  market.py  relationship.py  signal.py  snapshot.py  trade.py
src/polymarket_bot/execution/: paper_engine.py
tests/: conftest.py  test_analytics_store.py  test_backfill.py  test_bankroll_reporting.py  test_normalization.py  test_paper_execution.py  test_pipeline.py  test_pipeline_live.py  test_polymarket_client.py  test_relation_type_filter.py  test_relationships.py  test_reporting.py  test_risk_filters.py  test_segment_reporting.py  test_signals.py  test_snapshots.py
tests/fixtures/: live_markets_response.json  raw_markets.json
(+7 files in other folders)
